--- a/react-pagination/package.json
+++ b/react-pagination/package.json
@@ -1,22 +1,14 @@
 {
-  "name": "client",
+  "name": "react-pagination",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
-    "axios": "^0.21.1",
-    "bootstrap": "^4.6.0",
-    "material-ui": "^0.20.2",
-    "mdbootstrap": "^4.19.2",
     "react": "^17.0.2",
-    "react-calendar": "^3.3.1",
     "react-dom": "^17.0.2",
-    "react-paginate": "^7.1.2",
-    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "react-tap-event-plugin": "^3.0.3",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
